--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
             <div class="about-content">
                 <h2>Sobre <span>mim</span></h2>
                 <p>
-                    Um estudante das ciências da computação, gamer e entusiasta em mídias de terror, me aspiro em ser um modelador 3D com foco nesse tema. Intenso naquilo que me interessa, todos os meus projetos pessoais têm sangue e suor derramados neles, com a garantia de um toque especial em cada um deles, sendo meu foco atual a Integração em TI e automação de processos, com planos de aprimoramento nas minhas habilidades frontend e fullstack.
+                    Um estudante das ciências da computação, gamer e entusiasta em mídias de terror, aspiro a ser um modelador 3D com foco nesse tema. Intenso naquilo que me interessa, todos os meus projetos pessoais têm sangue e suor derramados neles, com a garantia de um toque especial em cada um deles, sendo meu foco atual a Integração em TI e automação de processos, com planos de aprimoramento nas minhas habilidades frontend e fullstack.
                 </p>
                 <a href="{{ url_for('projects_page') }}" class="btn">Veja meus projetos</a>
             </div>
