--- a/templates/projects.html
+++ b/templates/projects.html
@@ -79,7 +79,7 @@
                         <h2>Google Maps Query</h2>
 
                         <p class="brief-description">
-                            Um projeto / Ferramenta de linha de comando de Web scraping que extrai contatos e informações de negócios do google maps com base em localização e nicho. O projeto possui 2 versões (Java / Python), ambas usando Selenium com o código base quase que idêntico, com diferenças na interface.
+                            Um projeto / Ferramenta de linha de comando de Web scraping que extrai contatos e informações de negócios do Google Maps com base em localização e nicho. O projeto possui 2 versões (Java / Python), ambas usando Selenium com o código base quase idêntico, com diferenças na interface.
                         </p> 
 
                         <div class="full-description" style="display:none;">
@@ -131,7 +131,7 @@
                         <h2>Iris_Identif AI model tool</h2>
 
                         <p class="brief-description">
-                            Primeiro projeto realizado após finalizar o curso CS50AI de inteligencia artificial. Aplicativo com interface que, com um banco de dados com informações de 150 instancias da flor Iris, sendo 3 especiaes prevalentes nos Estados Unidos, eu treinei alguns modelos para que, dado-se informações das petalas dela, sera determiniado qual é a especie correspondente.
+                            Primeiro projeto realizado após finalizar o curso CS50AI de inteligência artificial. Aplicativo com interface que, com um banco de dados com informações de 150 instâncias da flor Íris, sendo 3 espécies prevalentes nos Estados Unidos, eu treinei alguns modelos para que, dadas informações das pétalas dela, seja determinado qual é a espécie correspondente.
                         </p> 
 
                         <div class="full-description" style="display:none;">
@@ -175,7 +175,7 @@
                         <h2>Mluz's apps</h2>
 
                         <p class="brief-description">
-                            Um conjuto de aplicativos, automações e ferramentas de linha de comando que eu fiz para o meu trabalho, uma assessoria de cobrança. Esses foram os primeirossoftwares que eu produzi, são 2 apps diferentes, uma agenda de acordos (App com GUI) que manda mensagem no Whatsapp no vencimento dos acordos. Uma ferramenta que manda extrai numero e email, e manda mensagem de cobrança com base em condicionais extraidas do nanco de dados principal da empresa.
+                            Um conjunto de aplicativos, automações e ferramentas de linha de comando que eu fiz para o meu trabalho, uma assessoria de cobrança. Esses foram os primeiros softwares que eu produzi, são 2 apps diferentes, uma agenda de acordos (App com GUI) que manda mensagem no WhatsApp no vencimento dos acordos. Uma ferramenta que extrai número e email, e manda mensagem de cobrança com base em condicionais extraídas do banco de dados principal da empresa.
                         </p> 
 
                         <div class="full-description" style="display:none;">
@@ -218,7 +218,7 @@
 
                         <p class="brief-description">
                             Um projeto de visualização e gestão da alocação de equipes técnicas, com foco em sua distribuição operacional.
-                            A ferramenta tem uma peculiaridade devido a nescessidades da empresa, a interface é dinâmica, com adição flexível de colunas e linhas, 
+                            A ferramenta tem uma peculiaridade devido às necessidades da empresa, a interface é dinâmica, com adição flexível de colunas e linhas, 
                             adaptando-se a estruturas organizacionais voláteis.
                         </p> 
 
