--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,7 +1,12 @@
-/* Import the Raleway font */
+/* ===============================
+   HEADER STYLES
+   =============================== */
 @import url("https://fonts.googleapis.com/css?family=Raleway");
 
-/* Header style */
+:root {
+    --glow-color: hsl(0, 0%, 100%);
+}
+
 .header {
     background: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
@@ -13,19 +18,7 @@
     padding: 3rem 12%;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row !important;
     z-index: 100;
-}
-
-.separation-site{
-    border-left: 1px solid var(--main-color);
-}
-
-
-#menu-icon {
-    font-size: 3.6rem;
-    color: var(--main-color);
-    display: none;
 }
 
 .logo {
@@ -44,15 +37,27 @@ span {
     color: var(--main-color);
 }
 
-.navbar{
+.separation-site {
+    border-left: 1px solid var(--main-color);
+}
+
+#menu-icon {
+    font-size: 3.6rem;
+    color: var(--main-color);
+    display: none;
+}
+
+/* ===============================
+   NAVIGATION
+   =============================== */
+.navbar {
     display: flex;
 }
 
 .navbar a {
     font-size: 1.8rem;
     color: var(--text-color);
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 0 1rem;
     font-weight: 500;
     border-bottom: 3px solid transparent;
     transition: 0.3s ease;
@@ -64,84 +69,20 @@ span {
 }
 
 
-@media (max-width: 1024px) {
-    #menu-icon {
-        display: block;
-    }
-    .navbar {
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 50%;
-        padding: 1rem 2.2rem;
-        background-color: rgba(0, 0, 0, 0.8);
-        border-left: 2px solid var(--main-color);
-        border-bottom: 2px solid var(--main-color);
-        border-bottom-left-radius: 2rem;
-        display: none;
-    }
-    .navbar a {
-        display: block;
-        font-size: 1.7rem;
-        margin: 2rem 0;
-        color: var(--text-color);
-    }
-    .navbar.active {
-        display: block;
-    }
-    .home {
-        flex-direction: column-reverse;
-        margin: 5rem 0;
-        gap: 5rem;
-    }
-    .home-content {
-        align-items: center;
-        text-align: center;
-    }
-    .home-img img {
-        width: 52vw;
-    }
-    .about {
-        flex-direction: column-reverse;
-        text-align: center;
-    }
-    .about h2 {
-        text-align: center;
-        margin: 2rem 0;
-    }
-    .about img {
-        width: 52vw;
-    }
-    .contact form {
-        flex-direction: column;
-    }
-    .separation-site{
-    border-top: 2px solid var(--main-color);
-    border-left: none;
-}
-}
-
-/* Glowing effect styles */
-:root {
-    --glow-color: hsl(0, 0%, 100%);
-}
-
+/* ===============================
+   GLOWING TEXT EFFECT
+   =============================== */
 .glowing-txt {
     color: white;
     margin-right: -0.8em;
-    -webkit-text-shadow: 0 0 0.125em hsl(0, 0%, 100%),
-                        0 0 0.45em var(--glow-color);
-    -moz-text-shadow: 0 0 0.125em hsl(0, 0%, 100%),
-                     0 0 0.45em var(--glow-color);
     text-shadow: 0 0 0.125em hsl(0, 0%, 100%),
                  0 0 0.45em var(--glow-color);
     animation: text-flicker 5s linear infinite;
 }
 
-.logo:hover
-.glowing-txt:hover {
+.logo:hover .glowing-txt:hover {
     animation: none;
-  }
+}
 
 @keyframes text-flicker {
     0% { opacity: 0.1; }
@@ -156,4 +97,75 @@ span {
     72% { opacity: 0.2; }
     77% { opacity: 0.9; }
     100% { opacity: 0.9; }
+}
+
+/* ===============================
+   RESPONSIVE DESIGN
+   =============================== */
+@media (max-width: 1024px) {
+    #menu-icon {
+        display: block;
+    }
+    
+    .navbar {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 50%;
+        padding: 1rem 2.2rem;
+        background-color: rgba(0, 0, 0, 0.8);
+        border-left: 2px solid var(--main-color);
+        border-bottom: 2px solid var(--main-color);
+        border-bottom-left-radius: 2rem;
+        display: none;
+    }
+    
+    .navbar a {
+        display: block;
+        font-size: 1.7rem;
+        margin: 2rem 0;
+        color: var(--text-color);
+    }
+    
+    .navbar.active {
+        display: block;
+    }
+    
+    .separation-site {
+        border-top: 2px solid var(--main-color);
+        border-left: none;
+    }
+    
+    .home {
+        flex-direction: column-reverse;
+        margin: 5rem 0;
+        gap: 5rem;
+    }
+    
+    .home-content {
+        align-items: center;
+        text-align: center;
+    }
+    
+    .home-img img {
+        width: 52vw;
+    }
+    
+    .about {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+    
+    .about h2 {
+        text-align: center;
+        margin: 2rem 0;
+    }
+    
+    .about img {
+        width: 52vw;
+    }
+    
+    .contact form {
+        flex-direction: column;
+    }
 }
